fix(): start/stop functionality